# rust-user

./: .env  .env.example  .gitignore  Cargo.toml  migrate.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250419_083500_update_user_table.rs  m20250419_090733_create_permission_table.rs  m20250419_090944_create_role_table.rs  m20250419_092048_create_company_table.rs  m20250419_094444_create_role_permission_table.rs  m20250419_094627_create_user_company_role_table.rs  m20250419_094816_create_user_company_permission_table.rs  m20250419_095857_create_user_audit_log_table.rs  m20250423_082948_alter_company_domain_table.rs
src/: main.rs
src/config/: constant.rs  db.rs  mod.rs
src/dto/: common_dto.rs  error_dto.rs  mod.rs  request_dto.rs  response_dto.rs
src/handlers/: auth_handler.rs  mod.rs  permission_handler.rs  role_handler.rs  user_handler.rs
src/models/: common_dto.rs  company.rs  mod.rs  permission.rs  prelude.rs  rel_role_permission.rs  rel_user_company_permission.rs  rel_user_company_role.rs  role.rs  user.rs  user_audit.rs
src/routes/: user_routes.rs
src/services/: company_service.rs  mod.rs  user_service.rs
src/utils/: authority_util.rs  error_util.rs  mail_util.rs  misc_util.rs  mod.rs
tests/: main_test.rs
