[package]
name = "user-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros" ,"debug-print"] }
log = "0.4.27"
chrono = "0.4.40"
bcrypt = "0.17.0"
hash-ids = "0.3.1"
env_logger = "0.11.8"
