[package]
name = "user-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"] }
log = "0.4.27"
chrono = "0.4.40"
hash-ids = "0.3.1"
env_logger = "0.11.8"
lettre = "0.11.15"
lettre_email = "0.9.4"
futures = "0.3.31"
derive_more = "2.0.1"
serde_json = "1.0.140"
diesel = "2.2.9"
generic-array = "0.14.7"
rand = "0.8.5"
aes = "0.8.4"
aes-gcm = "0.10.3"
hex = "0.4.3"
base64 = "0.22.1"
bcrypt = "0.17.0"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"

